adds admin role